@@ -54,8 +54,9 @@ Tools
 - The -compile command-line option now takes the full path of the considered
   file, including the ".v" extension, and outputs a warning if such an extension
   is lacking.
-- The -require command-line option now takes a logical path of a given library
-  rather than a physical path.
+- The -require and -load-vernac-object command-line options now take a logical
+  path of a given library rather than a physical path, thus they behave like
+  Require [Import] path.
 
 Changes from V8.5beta1 to V8.5beta2
 ===================================
